# sparky

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: check.yml  publish.yml
docs/: FIRMWARE_UPDATE_NOTES.md  go2_api_testing_guide.md
examples/: README.md  advanced_movement_demo.py  simple_robot_control.py  vision_pro_example.py
examples/advanced/: sparky_motion_demo.py
examples/basic/: data_stream_basic_example.py  forward_movement_test.py
examples/data_streaming/: README.md  data_export_example.py  data_stream_analytics_example.py
examples/testing/: advanced_movement_test.py  basic_movement_test.py  firmware_compatibility_test.py  motion_test.py  ultra_safe_queue_test.py
src/sparky/: __init__.py  cli.py  interfaces.py  robot.py
src/sparky/core/: __init__.py  action_queue.py  analytics_engine.py  connection.py  data_collector.py  motion.py  safety_manager.py  stream_processor.py
src/sparky/safety/: emergency_response.py  environmental_safety.py  fall_detection.py
src/sparky/utils/: __init__.py  banner.py  constants.py  exceptions.py
