[tool.poetry]
name = "go2-sparky"
version = "0.0.2"
description = "🤖 Comprehensive Go2 Robot Control Package"
authors = ["Ranga Reddy Nukala <itsmerr17@gmail.com>"]
readme = "README.md"
packages = [{ include = "sparky", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
go2-webrtc-connect = "^0.2.0"

# CLI-only deps (optional)
typer = { version = "^0.16.0", optional = true, extras = ["all"] }
rich = { version = "^14.1.0", optional = true }

[tool.poetry.extras]
cli = ["typer", "rich"]
all = ["typer", "rich"]

[tool.poetry.scripts]
sparky = "sparky.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
